add animation hover css & SNS Timeline

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 <body>
     <header>
-        <img class="icon" src="data/icon.png" alt="Haibala icon" width="128px">
-        <h1>Haibala</h1>
+        <h1><img class="icon round shadowrotate" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
+        Haibala</h1>
     </header>
     
     <h2>アカウント</h2>
     <h3>Twitter</h3>
     <ul>
-        <li class="li1">
-            <a href="https://twitter.com/@_haibala_">@_haibala_</a>
+        <li class="li1 linkbutton">
+            <a href="https://twitter.com/@_haibala_">@_haibala_　</a><a href="https://twitter.com/_haibala_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">　Follow @_haibala_　</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </li>
     </ul>
-    <h3>Discord</h3>
+        <h3>Discord</h3>
     <ul>
         <li class="li1">
             はいばら#2742
@@ -121,7 +121,7 @@
     </p>
     <h3>タグ</h3>
     <ul>
-    <li class="li1">
+    <li class="li1 linkbutton">
         <a href="https://twitter.com/search?q=%23%E3%81%AB%E3%81%99%E3%82%8B%E3%83%9C%E3%82%B3%E3%83%9C%E3%82%B3%E3%81%AB%E3%81%99%E3%82%8B&src=typed_query">#にするぼこぼこにする</a>
     </li>
     <li class="li1">
@@ -139,8 +139,18 @@
             <a href="./nostr.html">Nostr(工事中)</a>
         </li>
     </ul>
-    
-    <ul class="square">
+    <h2>つぶやき</h2>
+    <!-- Twitterタイムライン埋め込み -->
+    <a class="twitter-timeline" data-lang="ja" data-width="500" data-height="400" data-theme="light" href="https://twitter.com/_haibala_?ref_src=twsrc%5Etfw">
+        Tweets by _haibala_
+    </a> 
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- MisskeyとMastodonの埋め込み -->
+    <ins data-title="mk.yopo.work" data-acct="haibala@mk.yopo.work" data-limit="30"></ins>
+    <ins data-title="odakyu.app" data-acct="h@odakyu.app" data-limit="50"></ins>
+    <script src="https://notestock.osa-p.net/_js/notestock_widget.js" defer></script>
+
+    <ul class="square linkbutton"><!-- AddToAny Share button -->
         <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
             <a class="a2a_button_facebook"></a>
             <a class="a2a_button_twitter"></a>
