add rel=me in link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p class="space">MastodonとMisskey（どちらもTwitterみたいなSNS）</p>
     <ul>
         <li class="li1">
-            <a href="https://odakyu.app/@h">@h@odakyu.app</a>
+            <a rel="me" href="https://odakyu.app/@h">Mastodon</a>@h@odakyu.app</a>
             メイン
         </li>
         <li class="li1">
