--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h3>Twitter</h3>
     <ul>
         <li class="li1 linkbutton">
-            <a href="https://twitter.com/@_haibala_">@_haibala_　</a><a href="https://twitter.com/_haibala_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">　Follow @_haibala_　</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a rel="me" href="https://twitter.com/@_haibala_">@_haibala_　</a><a href="https://twitter.com/_haibala_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">　Follow @_haibala_　</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </li>
     </ul>
         <h3>Discord</h3>
@@ -50,31 +50,31 @@
     <p class="space">MastodonとMisskey（どちらもTwitterみたいなSNS）</p>
     <ul>
         <li class="li1">
-            <a rel="me" href="https://odakyu.app/@h">Mastodon</a>@h@odakyu.app</a>
+            <a rel="me" href="https://odakyu.app/@h">@h@odakyu.app</a>
             メイン
         </li>
         <li class="li1">
-            <a href="https://mk.yopo.work/@haibala">@haibala@mk.yopo.work</a>
+            <a rel="me" href="https://mk.yopo.work/@haibala">@haibala@mk.yopo.work</a>
             サブ
         </li>
         <li class="li1">
-            <a href="https://iyasaretai.pw/@haibala">@haibala@iyasaretai.pw</a>
+            <a rel="me" href="https://iyasaretai.pw/@haibala">@haibala@iyasaretai.pw</a>
         </li>
         <li class="li1">
-            <a href="https://misskey.io/@haibala">@haibala@misskey.io</a>
+            <a rel="me" href="https://misskey.io/@haibala">@haibala@misskey.io</a>
         </li>
         <li class="li1">
-            <a href="https://misskey.m544.net/@haibala">@haibala@misskey.m544.net</a>
+            <a rel="me" href="https://misskey.m544.net/@haibala">@haibala@misskey.m544.net</a>
         </li>
         <li class="li1">
-            <a href="https://mstdn.jp/@haibala2020">@haibala2020@mstdn.jp</a>
+            <a rel="me" href="https://mstdn.jp/@haibala2020">@haibala2020@mstdn.jp</a>
         </li>
         <li class="li1">
             <a href="https://mastodon-japan.net/@haibala">@haibala@mastodon-japan.net</a>
             ROM専
         </li>
         <li class="li1">
-            <a href="https://pawoo.net/@haibala2020">@haibala2020@pawoo.net</a>
+            <a rel="me" href="https://pawoo.net/@haibala2020">@haibala2020@pawoo.net</a>
             ROM専
         </li>
         <li class="li1">
