changed Textcolor , fixed icon size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="centertext"><!-- 中央寄せ -->
     <header>
         <p class="updated-date">更新：<time id="modify"></time></p>
-        <h1 class="bigtitle"><img class="icon round shadowrotate" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
+        <h1 class="bigtitle font-bold"><img class="icon round shadowrotate" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
         Haibala</h1>
         <nobr><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani1/61/1676526865/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td>
         <td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani2/61/1676526865/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td></tr></tbody></table></nobr>
