add utteranc.es test

--- a/redirect-https.html
+++ b/redirect-https.html
@@ -61,8 +61,6 @@
         有識者さん助けてください。
     </p>
     <img src="data/redirect-https/githubpages_https.png" alt="Github PagesでEnforce HTTPが選べない件" width="500px">
-    <p class="space">
-
     <ul class="square linkbutton"><!-- AddToAny Share button -->
         <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
             <a class="a2a_button_facebook"></a>
@@ -75,6 +73,13 @@
         
         <script async src="https://static.addtoany.com/menu/page.js"></script>
     </ul>
+    <script src="https://utteranc.es/client.js"
+        repo=" haibalaryo.github.io haibalaryo/haibalaryo.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+    </script>
     <footer>
         <p>
             <span class="footer-copyright">
