--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 <body class="centertext"><!-- 中央寄せ -->
     <header>
         <p class="updated-date">更新：<time id="modify"></time></p>
-        <h1 class="bigtitle font-bold"><img class="icon round shadowrotate" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
+        <h1 class="bigtitle font-bold"><img class="icon round shadowrotate default" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
         Haibala</h1>
-        <nobr><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani1/61/1676526865/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td>
-        <td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani2/61/1676526865/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td></tr></tbody></table></nobr>
+        <nobr><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani1/61/1676526865/" class="default" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td>
+        <td><a class="noeffect" href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/ani2/61/1676526865/" class="default" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td></tr></tbody></table></nobr>
             <!-- アクセスカウンター -->
         <p>Visits</p>
     </header>
     
     <h2>アカウント</h2>
-    <h3><i class="fab fa-twitter"></i> Twitter</h3>
+    <h3 class="hover"><i class="fab fa-twitter"></i> Twitter</h3>
     <ul>
         <li class="li1 linkbutton">
             <a rel="me" href="https://twitter.com/@_haibala_">@_haibala_</a><a href="https://twitter.com/_haibala_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">　Follow @_haibala_　</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </li>
     </ul>
-        <h3><i class="fa fa-discord" aria-hidden="true"></i> Discord</h3>
+    <h3 class="hover"><i class="fa fa-discord" aria-hidden="true"></i> Discord</h3>
     <ul>
         <li class="li1">
             はいばら#2742
         </li>
     </ul>
-    <h3><i class="fa fa-paper-plane" aria-hidden="true"></i> Nostr</h3>
+    <h3 class="hover"><i class="fa fa-paper-plane" aria-hidden="true"></i> Nostr</h3>
     <p class="space">TwitterやMastodonに似た分散型SNS</p>
     <ul>
         <li class="li1 nospace">
@@ -54,7 +54,7 @@
             <a href="https://iris.to/#/profile/npub1nhzuxyrzmhsl3ekgpkxfum7a7gh6yptxwgvfcezrc0v8kmk5mmns3g96e3">iris.to</a>
         </li>
     </ul>
-    <h3><i class="fa fa-activitypub" aria-hidden="true"></i> Fediverse</h3>
+    <h3 class="hover"><i class="fa fa-activitypub" aria-hidden="true"></i> Fediverse</h3>
     <p class="space">MastodonとMisskey（どちらもTwitterみたいなSNS）</p>
     <ul>
         <li class="li1">
@@ -115,26 +115,26 @@
     </ul>
     <p class="space">など</p>
 
-    <h3><img class="pixivlogo" src="./data/pixiv_logo_icon_r.png" width="10px"> pixiv</h3>  <!-- ピクシブは小文字 -->
+    <h3 class="hover"><img class="pixivlogo" src="./data/pixiv_logo_icon_r.png" width="10px"> pixiv</h3>  <!-- ピクシブは小文字 -->
     <ul>
         <li class="li1">
             <a href="https://www.pixiv.net/users/46726155">輩原(はいばら)</a>
             <p class="space">気まぐれで更新してます</p>
         </li>
     </ul>
-    <h3><i class="fa-brands fa-github"></i> GitHub</h3>
+    <h3 class="hover"><i class="fa-brands fa-github"></i> GitHub</h3>
     <ul>
         <li class="li1">
             <a href="https://github.com/haibalaryo">@haibalaryo </a>
         </li>
     </ul>
-    <h3><i class="fa fa-check-square" aria-hidden="true"></i> Annict</h3>
+    <h3 class="hover"><i class="fa fa-check-square" aria-hidden="true"></i> Annict</h3>
     <ul>
         <li class="li1">
             <a href="https://annict.com/@NISURU">@NISURU</a>
         </li>
     </ul>
-    <h3><i class="fa-solid fa-tower-cell"></i> Twitcasting</h3>
+    <h3 class="hover"><i class="fa-solid fa-tower-cell"></i> Twitcasting</h3>
     <ul>
         <li class="li1">
             <a href="https://twitcasting.tv/c:halaryo">@c:halaryo
@@ -146,7 +146,7 @@
     <p class="space">
         輩原にする。他にはいばら、にする。
     </p>
-    <h3>タグ</h3>
+    <h3 class="hover">タグ</h3>
     <ul>
     <li class="li1 linkbutton">
         <a href="https://twitter.com/search?q=%23%E3%81%AB%E3%81%99%E3%82%8B%E3%83%9C%E3%82%B3%E3%83%9C%E3%82%B3%E3%81%AB%E3%81%99%E3%82%8B&src=typed_query">#にするぼこぼこにする</a>
@@ -158,13 +158,16 @@
         <a href="https://twitter.com/search?q=%23%E8%BC%A9%E3%81%B7%E3%82%8C&src=typed_query&f=live">#輩ぷれ</a>
     </li>
     </ul>
-    <h3>身分</h3>
+    <h3 class="hover">身分</h3>
     <p class="space"><del>異常成人男性</del>　しがない大学生。20↑</p>
     <h2>備忘録</h2>
     <ul>
     </a>
         <li class="li1">
             <a class="local" href="./redirect-https.html">Cloudflareでhttpsにリダイレクトする方法</a>
+        </li>
+        <li class="li1">
+            <a class="local" href="./mfm-cheetsheet.html">MFMチートシート(工事中)</a>
         </li>
         <li class="li1">
             <a class="local" href="./nostr.html">Nostr(工事中)</a>
