--- a/redirect-https.html
+++ b/redirect-https.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="./css/main.css" type="text/css">
 <link rel="shortcut icon" href="data/favicon.ico" type="image/x-icon">
     <!-- Converted by https://ao-system.net/alphaicon/ -->
+<link rel= "stylesheet" href="./css/prism.css">
+    <!-- For highlight codes -->
 <script src="https://kit.fontawesome.com/7f0fbb83bf.js" crossorigin="anonymous"></script>
 </head>
 <body class="article">  <!-- 記事なので少し幅広の中央寄せ -->
@@ -99,6 +101,7 @@
         /* 日付を書き換える */
         const target = document.getElementById('modify');
         target.textContent = year + '-' + month + '-' + date;
-    </script> 
+    </script>
+    <script src="./js/prism">/* For highlight codes */</script>
 </body>
 </html>
