Delete code.flow class & CSS

--- a/mfm-cheetsheet.html
+++ b/mfm-cheetsheet.html
@@ -34,7 +34,7 @@
         <p class="space">
             乱用して公開投稿をすると閲覧している人々の迷惑となるほか、ブロックやミュートをされることがある。
         </p>
-        </div>
+    </div>
     <ol id="box">
             <li><span class="roundborder">1</span><a href="#chapter1" class="noeffect gray">強調</a></li>
             <ol class="child_ol">
@@ -204,7 +204,7 @@
     <p class="space">
         これを<code class="instring">$[rotate ]</code>と組み合わせるとふれすとさんのような投稿ができる。
     </p>
-    <pre><code class="flow">
+    <pre><code>
     $[position.x=4 $[rotate.deg=-60 $[scale.x=2.23 $[rotate.deg=45  :ablobcatfloofpat: ]]]]
     </code></pre>
 
